--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Next
+  - Fixed direct input of half-width kana (maron2000)
+  - Fixed PC-98 INT 1Fh, AH=90h source and destination address (drachen6jp)
+  - Fixed unnecessary trailing backslash in path name (maron2000)
+
 2025.02.01
   - Added new experimental dosbox.conf option that turns off the
     A20 gate automatically if loading a COM/EXE file to a memory
